traversal.snake.Snake.scala.error
Compilation error:
Snake:53: error: ';' expected but 'else' found.
    else
    ^